Add pjax js file, a little adjust of comments list html

--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -70,10 +70,10 @@
            </div>
            <li class="list-group-item">
            <div class="input-group">
-             <textarea rows="1" class="form-control" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
+             <textarea rows="5" class="form-control" id="reply{{message.id}}" name="reply" placeholder="可输入5-140个字"></textarea>
              <span class="input-group-btn">
-               <button class="btn btn-default submitComment" data-loading-text="评论中" onclick="reply('{{message.id}}')" type="button">
-                评论
+               <button class="btn btn-default submitComment" data-loading-text="回复中" onclick="reply('{{message.id}}')" type="button">
+                回复
                </button>
              </span>
            </div><!-- /input-group -->
