TODO: provide a way to delete

--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -7,6 +7,9 @@
 <h1>Comment Detail <small>{{comment.comment_board}}</small> </h1> 
 </div>
 
+<!--TODO owner can delete, admin can delete-->
+<button>Delete</button>
+
 <p>
 title: {{ comment.title }}<br/>
 comment_str: {{ comment.comment_str }}<br/>
