--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -4,8 +4,10 @@
 <div class="block">
 <div class="page-header">
 <h1>Comment Detail <small>{{comment.comment_board}}</small> </h1> 
-<!--TODO owner can delete, admin can delete-->
+{% if user == comment.user %}
 <a href="/comment/delete/{{comment.id}}">Delete</a>
+{% endif %}
+<!--TODO: allow administrator to delete-->
 </div>
 
 
