--- a/server/d1/vine_comment/templates/search/advanced_search.html
+++ b/server/d1/vine_comment/templates/search/advanced_search.html
@@ -2,6 +2,20 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+
+<div class="row">
+  <h2>Search</h2>
+  <form class="col-md-6 form" role="form" method="get" action=".">
+    <div>
+    {{ form|crispy }}
+    </div>
+    <div class="form-group ">
+      <button type="submit" class="btn btn-default">Search</button>
+    </div>
+  </form>
+</div>
+
+
 <div class="block">
 <form class="form-inline" role="search" method="get" action="/search">
   <div class="form-group">
