--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -61,7 +61,7 @@
             -<span>{{ message.down_users|length }}</span>
           </a>
          </span>
-         <span style="font-size:200%">{{message.comment_str}}</span>
+         <span style="font-size:200%" id="comment_str_{{message.id}}">{{message.comment_str}}</span>
          <span>
            (<a href="{{message.comment_board.url}}">{{message.comment_board.url}}</a>)
            <a href="#" onclick="expandDetail('{{message.id}}');return false;"><i class="fa fa-info-circle"></i></a>
@@ -69,7 +69,7 @@
          <br>
          <a href="#" style="margin-left:10px">{% if message.user %}{{ message.user }}{% else %}{{ message.author_ip }}{% endif %}</a>
          <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
-         <span>
+         <span id="comment_tags_{{message.id}}">
            {%for tag in message.tags%}
            <a href="#" onclick="SearchText('{{tag}}');return false;"><span class="label label-default">{{tag}}</span></a>
            {%endfor%}
