--- a/server/d1/vine_comment/templates/comments/comment_detail_view.html
+++ b/server/d1/vine_comment/templates/comments/comment_detail_view.html
@@ -61,7 +61,7 @@ tags: <p>{%for tag in comment.tags%}{{ tag }},{%endfor%}</p>
          if(el != '' && $.inArray(el, uniqueTags) === -1) {
            uniqueTags.push(el); 
            raw_tags += el+',';
-           $('<a href="#" onclick="SearchText('+el+');return false;"><span class="label label-default">'+el+'</span></a>')
+           $('<span><a href="#" onclick="SearchText('+el+');return false;"><span class="label label-default">'+el+'</span></a> </span>')
            .appendTo('#comment_tags_{{comment.id}}');
          }
        });
