--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -1,3 +1,4 @@
+{% comment %}
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% block head %}
@@ -12,3 +13,5 @@
 Best();
 </script>
 {% endblock %}
+{% endcomment %}
+{% include 'comments_best.html '%}
