Add the list for most replies

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -42,11 +42,20 @@
         <li><a href="/home/newest" id="comments_newest">最新</a></li>
         <li class="dropdown subject-item">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <div class="subject-title">最热 <b class="caret"></b></div></a>
+            <div class="subject-title">最多评论 <b class="caret"></b></div></a>
           <ul class="dropdown-menu">
-            <li><a href="/home/hot/1" id="comments_hot_1">今日最多up</a></li>
-            <li><a href="/home/hot/7" id="comments_hot_7">7天最多up</a></li>
-            <li><a href="/home/hot/30" id="comments_hot_30">30天最多up</a></li>
+            <li><a href="/home/hot/1" id="comments_hot_1">今日最多评论</a></li>
+            <li><a href="/home/hot/7" id="comments_hot_7">7天最多评论</a></li>
+            <li><a href="/home/hot/30" id="comments_hot_30">30天最多评论</a></li>
+          </ul>
+        </li>
+        <li class="dropdown subject-item">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <div class="subject-title">最多up <b class="caret"></b></div></a>
+          <ul class="dropdown-menu">
+            <li><a href="/home/up/1" id="comments_hot_1">今日最多up</a></li>
+            <li><a href="/home/up/7" id="comments_hot_7">7天最多up</a></li>
+            <li><a href="/home/up/30" id="comments_hot_30">30天最多up</a></li>
           </ul>
         </li>
         <li class="dropdown subject-item">
