template: comment presentation tab for further works

--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -37,7 +37,7 @@
     </div> <!-- .navbar-header -->
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li>
+        <!-- <li><a href="#home" data-toggle="tab" onclick="Home(this)">展示</a></li> -->
         <li><a href="/home/best" id="comments_best">最优</a></li>
         <li><a href="/home/newest" id="comments_newest">最新</a></li>
         <li class="dropdown subject-item">
