template: update faceted_search

--- a/server/d1/vine_comment/templates/search/faceted_search.html
+++ b/server/d1/vine_comment/templates/search/faceted_search.html
@@ -6,7 +6,7 @@
 <div class="block">
 <form class="form-inline" role="search" method="get" action=".">
   <div class="form-group">
-    <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索全站内容" onkeypress="return SearchIfEnter(event)">
+    <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索全站内容">
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-default">Search</button>
