--- a/server/d1/static/css/navbar_dwarf.css
+++ b/server/d1/static/css/navbar_dwarf.css
@@ -1,6 +1,6 @@
 .navbar-primary .navbar { border-bottom:none; }
 .navbar-primary .navbar .nav.pull-right {margin-left: 10px; margin-right: 0;}
-.navbar-xs .navbar-primary .navbar .navbar-form { margin: 0; } 
+.navbar-xs .navbar-primary .navbar .navbar-form { margin: 2px 0; } 
 .navbar-xs .navbar-primary .navbar { min-height:28px; } 
 .navbar-xs .navbar-primary .navbar .navbar-brand{ padding: 8px 8px; font-size: 16px; line-height: 18px; font-weight: bold; } 
 .navbar-xs .navbar-primary .navbar .navbar-nav > li > a {  padding-top: 7px; padding-bottom: 7px; line-height: 20px; } 
