--- a/server/d1/vine_comment/templates/base.html
+++ b/server/d1/vine_comment/templates/base.html
@@ -68,12 +68,17 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search" method="get" action="/search">
-        <div class="form-group">
-          <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索全站内容" onkeypress="return SearchIfEnter(event)">
+      <div class="col-sm-3 col-md-3">
+      <form class="navbar-form navbar-left" role="search" method="get" action="/faceted_search">
+        <div class="input-group">
+          <input id="search-input" type="text" name="q" class="form-control" placeholder="搜索">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
         </div>
-        <a href="#" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a>
+        <!-- <a href="#" onclick="Search(this)"><span class="glyphicon glyphicon-search"></span></a> -->
       </form>
+      </div>
       <ul class="nav navbar-nav navbar-right">
         {% include 'auth/auth_all__li.html' %}
       </ul>
