--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -39,7 +39,7 @@
     <ul class="list-group">
     {% for message in p_comment.object_list %}
       <li class="list-group-item">
-        <span style="float:right">
+         <span style="float:right">
           <a href="#" id="up_comment_{{message.id}}" onclick="up('{{message.id}}');return false;">
             {% if user.id in message.up_users %}
             <i class="fa fa-thumbs-up"></i>
@@ -67,8 +67,17 @@
            <a href="#" onclick="expandDetail('{{message.id}}');return false;"><i class="fa fa-info-circle"></i></a>
          </span>
          <br>
-         <a href="#" style="margin-left:10px">{% if message.user %}{{ message.user }}{% else %}{{ message.author_ip }}{% endif %}</a>
-         <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
+         <span>
+           <a href="#">
+               {% if author.picture %}
+                <img class="avatar large border" src="{{ author.picture.url }}" style="max-width:100%; max-height:100%;">
+               {% else %} <!-- no head sculpture -->
+               <img class="avatar large border" src="http://www.gravatar.com/avatar/73c2759e2936bc26746d0d26375aed31?d=retro&amp;s=30">
+               {% endif %}
+               {% if message.user %}{{ message.user }}{% else %}{{ message.author_ip }}{% endif %}
+           </a>
+           <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
+         </span>
          <span id="comment_tags_{{message.id}}">
            {%for tag in message.tags%}
            <a href="#" onclick="SearchText('{{tag}}');return false;"><span class="label label-default">{{tag}}</span></a>
