template: comment tag use href link now.

--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -80,7 +80,7 @@
          </span>
          <span id="comment_tags_{{message.id}}">
            {%for tag in message.tags%}
-           <a href="#" onclick="SearchText('{{tag}}');return false;"><span class="label label-default">{{tag}}</span></a>
+           <a href="/faceted_search/?q={{tag}}"><span class="label label-default">{{tag}}</span></a>
            {%endfor%}
          </span>
          <br>
