--- a/server/d1/vine_comment/templates/comments_best.html
+++ b/server/d1/vine_comment/templates/comments_best.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript">
 			var l = document.location;
 			$('#pagination_arrow_{{ p_comment.previous_page_number }}').on('click', function() {
-				$('#showMsg').load('/home/best?page={{ p_comment.previous_page_number }}');
+				$('#showMsg').load('/comments/best?page={{ p_comment.previous_page_number }}');
 			});
 		</script>
 		{% endif %}
@@ -31,7 +31,7 @@
 				<li id='pagination_{{num}}'><a href="#">{{ num }}</a></li>
 				<script type="text/javascript">
 					$('#pagination_{{num}}').on('click', function() {
-						$('#showMsg').load('/home/best?page={{ num }}');
+						$('#showMsg').load('/comments/best?page={{ num }}');
 					});
 				</script>
 
@@ -41,7 +41,7 @@
 		<li id='pagination_arrow_{{ p_comment.next_page_number }}'><a href="#">»</a></li>
 		<script type="text/javascript">
 			$('#pagination_arrow_{{ p_comment.next_page_number }}').on('click', function() {
-				$('#showMsg').load('/home/best?page={{ p_comment.next_page_number }}');
+				$('#showMsg').load('/comments/best?page={{ p_comment.next_page_number }}');
 			});
 		</script>
 		{% endif %}
