--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -68,7 +68,7 @@
          </span>
          <br>
          <span>
-           <a href="#">
+           <a href="/home/">
                {% if author.picture %}
                 <img class="avatar large border" src="{{ author.picture.url }}" style="max-width:100%; max-height:100%;">
                {% else %} <!-- no head sculpture -->
