--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -1,17 +1,204 @@
-{% comment %}
 {% extends 'base.html' %}
-{% load staticfiles %}
+{% load crispy_forms_tags %}
+
 {% block head %}
-<link href="{% static 'css/home.css' %}" rel="stylesheet"/>
+<style>
+
+.thumbnail {
+text-align:center;
+}
+.thumbnail p {
+white-space: nowrap;
+overflow:hidden;
+text-overflow:ellipsis;
+}
+.user-author-header {
+position: relative;
+padding: 30px 0;
+margin-bottom: 20px;
+background-color:white;
+}
+.header-gray {
+background-color: #F3F3F3;
+}
+
+</style>
 {% endblock %}
 
 {% block content %}
+
+<header class="user-author-header header-gray">
+<div class="container">
+
+  <div class="row">
+
+    <div id="user-info-view" class="col-md-2 pull-left">
+      <div class="avatar-wrapper">
+        <a onclick="showForm(this, 'picForm')" title="更换头像" href='#'>
+          <div class="avatar-image-container">
+            {% if author.picture %}
+             <img class="avatar large border" src="{{ author.picture.url }}" style="max-width:100%; max-height:100%;">
+            {% else %} <!-- no head sculpture -->
+            <img class="avatar large border" src="http://www.gravatar.com/avatar/73c2759e2936bc26746d0d26375aed31?d=retro&amp;s=140">
+            {% endif %}
+          </div>
+        </a>
+        {% comment %}
+        <form method="post" action="{% url 'user_head_sculpture' %}" enctype="multipart/form-data" style='display:none' id='picForm'>
+          {% csrf_token %}
+          {{ header_form|crispy }}
+          <div class="control-group">
+            <div class="controls">
+              <button type="submit" class="btn btn-primary">上传</button>
+            </div>
+          </div>
+        </form>
+        {% endcomment %}
+      </div>
+    </div>
+
+    <div id="user-info-view" class="col-md-2 pull-left">
+      <div class="user-details">
+        <div class="user-details-show">
+          <div class="user-identifier user-details-editable">
+            <span class="username">用户名：{{ user }}</span>
+          </div>
+        </div>
+        <div>详细信息</div>
+      </div>
+    </div>
+
+    <div class="user-stats col-md-2">
+      <div class="user-points-bar-container">
+        <div class="points-labels">
+          <span class="best">最高得分 <strong class="best-count"> {{ author.biggest_points }} </strong></span>
+        </div>
+        <div class="points-labels">
+          <span class="best">历史积分 <strong class="best-count"> {{ author.total_points }} </strong></span>
+        </div>
+        <div class="points-labels">
+          <span class="best">当前积分 <strong class="best-count"> {{ author.usable_points }} </strong></span>
+        </div>
+        <!-- 今天的分数
+        <div class="points-bar">
+          <span class="points-bar-fill" style="width: 0.0%">今天的分数
+            <span class="count-container count-right">
+              <span class="points-today-count"> XXX </span>
+            </span>
+          </span>
+        </div> -->
+      </div>
+    </div>
+
+<!--
+持续时间    <span class="stat-count"> XXX </span> 天
+<div class="last-coded">上次编码<span class="last-coded-time"> XXX 天前</span></div>
+-->
+    <div class="user-stats col-md-2">
+      <div class="user-points-bar-container">
+        <div class="points-labels">
+          <span class="cright">连续做对<strong class="study-cright">{{ author.study_cright }}道</strong>自测题</span>
+        </div>
+        <div class="points-labels">
+          <span class="cright">连续做对<strong class="exam-cright">{{ author.exam_cright }}道</strong>测试题</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+</header>
+
 {% endblock %}
 
-{% block footer %}
-<script type="text/javascript">
-Best();
-</script>
+{% block container %}
+
+<div class="row">
+  <div class="page-header">
+    <h2>我的课程</h2>
+  </div>
+  {% for todo in todos %}
+  <div class="col-sm-6 col-md-3">
+    <a title="开始学习" href="/study/book/{{todo.book.name}}/lesson/{{todo.lesson.name}}/show" class="thumbnail">
+      <div class="caption">
+        <h4><p>{{todo.book.name}}</p></h4>
+        <h3><p>{{ todo.lesson.name }}</p></h3>
+        <input type="text" value="{{ todo.lesson.stat.percent }}" class="dial" data-height="100" data-width="100" data-fgColor="#07DD3B" data-skin="tron" data-thickness=".13" data-angleOffset="180" data-inputColor="#969696">
+        <p>sum:{{ todo.lesson.words | length }}</p>
+        <p>上次学习：{{todo.lesson.stat.timestamp | date }}</p>
+      </div>
+    </a>
+  </div>
+  {% endfor %}
+</div>
+
+<div class="row">
+  <div class="page-header">
+    <h2>我的考试</h2>
+  </div>
+  {% for examstat in examstats %}
+  <div class="col-sm-6 col-md-3">
+    <a title="开始考试" href="/exam/{{examstat.exam.id}}" class="thumbnail">
+      <div class="caption">
+        <h3><p>{{ examstat.exam.name }}</p></h3>
+        <input type="text" value="{% widthratio examstat.score examstat.exam.totalpoints 100 %}" class="dial" data-height="100" data-width="100" data-fgColor="#07DD3B" data-skin="tron" data-thickness=".13" data-angleOffset="180" data-inputColor="#969696">
+        <p>score:{{ examstat.score }}</p>
+        <p>上次考试：{{examstat.timestamp | date }}</p>
+      </div>
+    </a>
+  </div>
+  {% endfor %}
+</div>
+
+<div class="row">
+  <div class="page-header">
+    <h2>我的奖品</h2>
+  </div>
+  {% for pq in prize_queries %}
+  <div class="col-sm-6 col-md-3">
+    <div title="我的奖品" class="thumbnail">
+      <div class="caption">
+        <h4>奖品名：{{ pq.prize.name }}</h4>
+        <p>奖品分类：{{ pq.prize.category }}</p>
+        <p>奖品价格：{{ pq.value }}</p>
+        {% if pq.done %}
+        <p>获奖时间：{{ pq.date }}</p>
+        {% else %}
+        <p>申请中...</p>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 {% endblock %}
-{% endcomment %}
-{% include 'comments_best.html '%}
+
+{% block body_footer %}
+<script src="http://cdn.jsdelivr.net/jquery.knob/1.2.2/jquery.knob.min.js"></script>
+
+<script>
+$(function() {
+    $(".dial").knob({
+    	readOnly:true,
+        'draw': function () {
+          if (this.cv.indexOf('%') == -1)
+            $(this.i).val(this.cv + '%');
+        }
+    });
+    $(".knob").knob();
+});
+
+function showForm(me, id) {
+  if ($('#'+id).is(":visible")) {
+    $(me).attr('title', "更换头像");
+    $('#'+id).hide();
+  } else {
+    $(me).attr('title', "收起表单");
+    $('#'+id).show();
+  }
+};
+</script>
+
+{% endblock %}
+
