--- a/server/d1/vine_comment/templates/comments_list.html
+++ b/server/d1/vine_comment/templates/comments_list.html
@@ -1,4 +1,6 @@
 {% load humanize %}
+{% load avatar_tags %}
+
 
   <script>
     function expandReply(id) {
@@ -69,12 +71,12 @@
          <br>
          <span>
            <a href="/home/">
-               {% if message.author.picture %}
-                <img class="avatar large border" src="{{ message.author.picture.url }}" style="max-width:50px; max-height:30px;">
-               {% else %} <!-- no head sculpture -->
+             {% if message.author.user|has_avatar %}
+               {% avatar message.author.user 30 %}
+             {% else %} <!-- no head sculpture -->
                <img class="avatar large border" src="http://www.gravatar.com/avatar/73c2759e2936bc26746d0d26375aed31?d=retro&amp;s=30">
                {% endif %}
-               {% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}
+             {% if message.author %}{{ message.author.user }}{% else %}{{ message.author_ip }}{% endif %}
            </a>
            <span id='comment_time'>提交于 {{ message.time_added|naturaltime }}</span>
          </span>
