TODO: record user's login actions

--- a/server/d1/vine_comment/templates/home.html
+++ b/server/d1/vine_comment/templates/home.html
@@ -93,10 +93,10 @@ background-color: #F3F3F3;
     <div class="user-stats col-md-2">
       <div class="user-points-bar-container">
         <div class="points-labels">
-          <span class="cright">连续做对<strong class="study-cright">{{ author.study_cright }}道</strong>自测题</span>
+          <span class="cright">连续登录<strong class="study-cright">{{ author.study_cright }}天</strong></span>
         </div>
         <div class="points-labels">
-          <span class="cright">连续做对<strong class="exam-cright">{{ author.exam_cright }}道</strong>测试题</span>
+          <span class="cright">连续登录<strong class="exam-cright">{{ author.exam_cright }}天</strong></span>
         </div>
       </div>
     </div>
